[package]
name = "stealth-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "enarx-runner"
path = "src/bin/enarx_runner.rs"

[[bin]]
name = "client_instance"
path = "src/bin/client_instance.rs"

[[bin]]
name = "stealth-server"
path = "src/main.rs"

[features]
default = ["server"]
server = ["actix-web", "env_logger", "dotenv"]

[dependencies]
aes-gcm = "0.10.3"
hpke = "0.13.0"
k256 = "0.13.4"
ed25519-dalek = "2.1.1"
blake2 = "0.10.6"
md5 = "0.7.0"
base64 = "0.22.1"
hex = "0.4.3"
sha2 = "0.10.8"
ecies = { version = "0.2.9", default-features = false, features = ["aes-rust"] }
tokio = { version = "1.44.2", default-features = false, features = ["sync", "macros", "io-util", "rt", "time"] }
rand_core = "0.9.3"
thiserror = "2.0.12"
x25519-dalek = "2.0.1"
rand = "0.9.0"
enarx-config = "0.6.3"
toml = "0.8.20"
serde ={version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tempfile = "3.19.1"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = {version = "4.9.0", optional = true}
log = {version = "0.4.27", features = ["std"]}
env_logger = {version = "0.11.8", optional = true}
dotenv = {version = "0.15.0", optional = true}
